Revert Java 17 compatibility fixes - restore Java 21+ List methods for Java 23
Co-authored-by: commjoen <1457214+commjoen@users.noreply.github.com>