@@ -16,25 +16,24 @@ class NavigatorTest {
     var navigation =
         new Navigator(
             challengeDefinitionsConfiguration.challenges(),
-            challengeDefinitionsConfiguration.challenges().get(0));
+            challengeDefinitionsConfiguration.challenges().getFirst());
 
     assertThat(navigation.previous()).isEmpty();
   }
 
   @Test
   void navigateNextWhenOnLastChallenge() {
-    var challenges = challengeDefinitionsConfiguration.challenges();
     var navigation =
         new Navigator(
-            challenges,
-            challenges.get(challenges.size() - 1));
+            challengeDefinitionsConfiguration.challenges(),
+            challengeDefinitionsConfiguration.challenges().getLast());
 
     assertThat(navigation.next()).isEmpty();
   }
 
   @Test
   void navigatePreviousAndNextOnSecondChallenge() {
-    var first = challengeDefinitionsConfiguration.challenges().get(0);
+    var first = challengeDefinitionsConfiguration.challenges().getFirst();
     var second = challengeDefinitionsConfiguration.challenges().get(1);
     var third = challengeDefinitionsConfiguration.challenges().get(2);
 
